# cockpitflow

./: .gitignore  README.md  index.html  package-lock.json  package.json  svelte.config.js  vite.config.ts
public/: cf-widgets.js  checklist.html  cockpit.html  cockpit2.html  manifest.json  panel.html  sw.js
public/data/: defaults.json  failures.json  hardware-functions.json
public/modules/checklist/: defaults.json  module.json  renderer.html
public/modules/cockpit/: module.json  renderer.html
public/modules/community/: module.json
public/modules/console/: module.json
public/modules/debrief/: module.json
public/modules/flight/: module.json
public/modules/hardware/: module.json
public/modules/logbook/: module.json
public/modules/marketplace/: module.json
public/modules/nav/: module.json
public/modules/panel/: module.json
public/modules/scenarios/: module.json
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/hardware/: manager.rs  mod.rs  serial.rs  udp.rs
src/i18n/: de.json  en.json  es.json  fr.json  index.ts  it.json  ja.json  ko.json  nl.json  pl.json  pt.json  ro.json  ru.json  zh.json
src/lib/: CockpitBuilder.svelte  Marketplace.svelte  ModuleManager.svelte  mock.ts
src/lib/data/: failures.ts
src/lib/gauges/: AircraftSilhouette.svelte  Airspeed.svelte  Altimeter.svelte  Attitude.svelte  BoardDiagram.svelte  Checklist.svelte  ChecklistEditor.svelte  ConditionEditor.svelte  DeviceManager.svelte  DragDropMapper.svelte  FlowEditor.svelte  (+15 more)
(+25 files in other folders)
