[package]
name = "app"
version = "1.0.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
serialport = "4"
tiny_http = { version = "0.12", features = ["ssl-rustls"] }
rcgen = "0.13"
local-ip-address = "0.6"
winapi = { version = "0.3", features = ["winuser", "wingdi", "windef", "libloaderapi", "processthreadsapi"] }
base64 = "0.22"
